--- a/anime-title/demonslayer.html
+++ b/anime-title/demonslayer.html
@@ -158,9 +158,25 @@
         />
 
         <div class="description">
-          Kimetsu no Yaiba" - японське історично-фантастичне аніме, яке розповідає про пригоди молодого хлопця на ім'я Танджиро, який вступає в нерівну боротьбу з надприродними істотами.
-У центрі сюжету - юнак Танджиро, який вже прославився, як відважний і хоробрий воїн. Винищуючи демонів і інших надприродних представників потойбічного світу, Танджиро стає досвідченим нічним бійцем, про якого складають легенди. Хлопець не боїться вступати в смертельну сутичку з будь-якими, навіть дуже страшними і жахливими монстрами. Він завжди готовий битися з будь-яким з суперників та може побороти будь-якого представника темряви, будь то демон, вампір або гоблін. І хоча Танджиро ще досить молодий, його життєвий шлях складно назвати безхмарним. Ще в дитинстві головний герой втратив рідних, і саме тоді дав собі клятву помститися за їх загибель. Ось чому він мстить демонам і іншим монстрам, які тільки сміють постати на його шляху. Відтепер юнак вирішує присвятити своє життя служінню людям, захищаючи слабких і допомагаючи нужденним. А в нелегкій справі боротьби йому допомагає чарівний меч, наділений магічними властивостями.
-"Клинок, який знищує демонів" - гарне аніме з цікавим малюванням, захоплюючим сюжетом і харизматичним головним персонажем.
+          Kimetsu no Yaiba" - японське історично-фантастичне аніме, яке
+          розповідає про пригоди молодого хлопця на ім'я Танджиро, який вступає
+          в нерівну боротьбу з надприродними істотами. У центрі сюжету - юнак
+          Танджиро, який вже прославився, як відважний і хоробрий воїн.
+          Винищуючи демонів і інших надприродних представників потойбічного
+          світу, Танджиро стає досвідченим нічним бійцем, про якого складають
+          легенди. Хлопець не боїться вступати в смертельну сутичку з
+          будь-якими, навіть дуже страшними і жахливими монстрами. Він завжди
+          готовий битися з будь-яким з суперників та може побороти будь-якого
+          представника темряви, будь то демон, вампір або гоблін. І хоча
+          Танджиро ще досить молодий, його життєвий шлях складно назвати
+          безхмарним. Ще в дитинстві головний герой втратив рідних, і саме тоді
+          дав собі клятву помститися за їх загибель. Ось чому він мстить демонам
+          і іншим монстрам, які тільки сміють постати на його шляху. Відтепер
+          юнак вирішує присвятити своє життя служінню людям, захищаючи слабких і
+          допомагаючи нужденним. А в нелегкій справі боротьби йому допомагає
+          чарівний меч, наділений магічними властивостями. "Клинок, який знищує
+          демонів" - гарне аніме з цікавим малюванням, захоплюючим сюжетом і
+          харизматичним головним персонажем.
         </div>
       </div>
 
@@ -169,141 +185,146 @@
         фентезі, сьонен <br /><strong>Тип:</strong> ТБ <br /><strong
           >Кількість серій:</strong
         >
-        26 (25 хв.) <br /><strong>Режисер:</strong>  Сотодзакі Харуо
+        26 (25 хв.) <br /><strong>Режисер:</strong> Сотодзакі Харуо
       </div>
 
       <div class="video-wrapper" id="video-container">
         <iframe
-          src="https://lando.animedia.pro/2147412116.mp4?md5=ikZhJa_xbPEJsPuz_lSgEQ&time=1747515033"
+          src="https://kodik.info/seria/424881/5aa63006d467875cf14b94652d3474ab/720p"
           allowfullscreen
         ></iframe>
       </div>
 
       <div class="episodes">
         <button
-          data-src="https://lando.animedia.pro/2147412116.mp4?md5=ikZhJa_xbPEJsPuz_lSgEQ&time=1747515033"
+          data-src="https://kodik.info/seria/424881/5aa63006d467875cf14b94652d3474ab/720p"
         >
           Серія 1
         </button>
         <button
-          data-src="https://lando.animedia.pro/2147412171.mp4?md5=dt1rpMr-OT_7QhiuO28_XA&time=1747515081"
+          data-src="https://kodik.info/seria/426623/3b9eda487d515cc637f69344e208df88/720p"
         >
           Серія 2
         </button>
         <button
-          data-src=""
+          data-src="https://kodik.info/seria/428186/246d38a8c78247fb5283113b1e85ae16/720p"
         >
           Серія 3
         </button>
         <button
-          data-src=""
+          data-src="https://kodik.info/seria/430849/54c8bb7b6d210d5ec77e8c0a432af7df/720p"
         >
           Серія 4
         </button>
         <button
-          data-src="https://vn5614.tigerlips.org/720/2147383409.mp4?md5=ggEZqbsUOj0QhPmM4RvE6Q&time=1747437772&d=1"
+          data-src="https://kodik.info/seria/432836/7221ccd17a3f8a4c74e6d675365e5715/720p"
         >
           Серія 5
         </button>
         <button
-          data-src="https://vn5614.tigerlips.org/720/2147383410.mp4?md5=7iopWqhXO2Q-8JdFywXiGA&time=1747437977&d=1"
+          data-src="https://kodik.info/seria/434983/ebc6f62694b85a9cde5b0edf759a6fb5/720p"
         >
           Серія 6
         </button>
         <button
-          data-src="https://vn5614.tigerlips.org/720/2147383411.mp4?md5=YgxaF3kbf3yC7r3YLL3M5w&time=1747437997&d=1"
+          data-src="https://kodik.info/seria/437449/09b49d874d463ba3e1dcf5883f721086/720p"
         >
           Серія 7
         </button>
         <button
-          data-src="https://vn5614.tigerlips.org/720/550813041.mp4?md5=EJ20tBI7xES8kKFBdnrCBw&time=1747438043&d=1"
+          data-src="https://kodik.info/seria/440894/a53457eeab7ff311dc294aa8a47305e0/720p"
         >
           Серія 8
         </button>
         <button
-          data-src="https://vn5614.tigerlips.org/720/548591346.mp4?md5=o-vhcn0RDi3qUM_ErnDwAA&time=1747438067&d=1"
+          data-src="https://kodik.info/seria/443158/a3f42337b8b574281ec0273d8d8065f9/720p"
         >
           Серія 9
         </button>
         <button
-          data-src="https://vn5614.tigerlips.org/720/1446102290.mp4?md5=V69FJdzCZCM_sqz30p3ByA&time=1747438094&d=1"
+          data-src="https://kodik.info/seria/444600/22092b45cb54987464a89c31f3d15915/720p"
         >
           Серія 10
         </button>
         <button
-          data-src="https://vn5614.tigerlips.org/720/1794941554.mp4?md5=rejBJGuXlXTia9cno5CrlQ&time=1747438117&d=1"
+          data-src="https://kodik.info/seria/449310/66a8ba93b8694467245af0674d05fdd3/720p"
         >
           Серія 11
         </button>
         <button
-          data-src="https://vn5614.tigerlips.org/720/697871446.mp4?md5=WPv07-Tvf8T-U9ou9QrJXg&time=1747438309&d=1"
+          data-src="https://kodik.info/seria/449311/cdcf214998397b958aeafcbf6cb9865d/720p"
         >
           Серія 12
         </button>
         <button
-          data-src="https://vn5614.tigerlips.org/720/2147383413.mp4?md5=w4v_GhOEqXPwLYRu7Cjm_Q&time=1747438325&d=1"
+          data-src="https://kodik.info/seria/451738/65896ae071e7463adfc9166be926b559/720p"
         >
           Серія 13
         </button>
         <button
-          data-src="https://vn5614.tigerlips.org/720/2147383412.mp4?md5=Br9npciASsp9fjswMaoTVQ&time=1747438340&d=1"
+          data-src="https://kodik.info/seria/454994/86531968bf01e1d437493e2d989d0814/720p"
         >
           Серія 14
         </button>
         <button
-          data-src="https://vn5614.tigerlips.org/720/38354737.mp4?md5=4IQ-P3hiT2OwjcsJTTwTHw&time=1747438407&d=1"
+          data-src="https://kodik.info/seria/457824/638232a7477cc3f6f49760b8542a3a44/720p"
         >
           Серія 15
         </button>
         <button
-          data-src="https://vn5614.tigerlips.org/720/289850391.mp4?md5=FD0pk8w1HSeYZJbCtBzyXQ&time=1747438420&d=1"
+          data-src="https://kodik.info/seria/460562/323cd3ef30a89c5106dd69cede99a168/720p"
         >
           Серія 16
         </button>
         <button
-          data-src="https://vn5614.tigerlips.org/720/2021377872.mp4?md5=PNfuouCHWkNBKVWO3XbOqw&time=1747438438&d=1"
+          data-src="https://kodik.info/seria/464413/e51ea523887a715b21a0a02eefa0bf6b/720p"
         >
           Серія 17
         </button>
         <button
-          data-src="https://vn5614.tigerlips.org/720/1651616395.mp4?md5=Hwu-CgNZHH4Jx3CK48G_GA&time=1747438458&d=1"
+          data-src="https://kodik.info/seria/467449/d1e17e1f4757e2ea331963de196831dd/720p"
         >
           Серія 18
         </button>
         <button
-          data-src="https://vn5614.tigerlips.org/720/1716919872.mp4?md5=EfRRBTDBMG_FbuO8g4ALSA&time=1747438489&d=1"
+          data-src="https://kodik.info/seria/470471/4c0d1706beeef4f2d0ee0e79ce340a13/720p"
         >
           Серія 19
         </button>
         <button
-          data-src="https://vn5614.tigerlips.org/720/2147383414.mp4?md5=EWbuxfu6Lrpp1-yy8rBR0Q&time=1747438518&d=1"
+          data-src="https://kodik.info/seria/473580/ff6d0ef5e1fa0199c2573c36136f3343/720p"
         >
           Серія 20
         </button>
         <button
-          data-src="https://vn5614.tigerlips.org/720/1762945533.mp4?md5=N478yERpMyAGtV5xsyTEAw&time=1747438537&d=1"
+          data-src="https://kodik.info/seria/476896/aa7695959b8feb3482c099b4b0c33e96/720p"
         >
           Серія 21
         </button>
         <button
-          data-src="https://vn5614.tigerlips.org/720/540986306.mp4?md5=Oaw87osTk4Tss1LAW3eiWw&time=1747438552&d=1"
+          data-src="https://kodik.info/seria/479712/5b90c61f2bc94bd6a36105b6c1ba8e7f/720p"
         >
           Серія 22
         </button>
         <button
-          data-src="https://vn5614.tigerlips.org/720/960279069.mp4?md5=vAAq09j7b-Ydd1b48KEUZA&time=1747438594&d=1"
+          data-src="https://kodik.info/seria/481896/c00b9693425940ffb26249a843896754/720p"
         >
           Серія 23
         </button>
         <button
-          data-src="https://vn5614.tigerlips.org/720/1760109389.mp4?md5=xyYbmdGVEkbuXCHgaGF8UQ&time=1747438614&d=1"
+          data-src="https://kodik.info/seria/484977/ed2b536321fd2655f3425a5392d5a2f7/720p"
         >
           Серія 24
         </button>
         <button
-          data-src="https://vn5614.tigerlips.org/720/518950799.mp4?md5=8Yjm7VBIm8OaJ0tB2lG8uQ&time=1747438652&d=1"
+          data-src="https://kodik.info/seria/487755/c8704071c4f87a66b8d86debbc9a5b71/720p"
         >
           Серія 25
+        </button>
+        <button
+          data-src="https://kodik.info/seria/490793/42a5632dd5b6aa688d88045b151c1344/720p"
+        >
+          Серія 26
         </button>
       </div>
     </div>
