--- a/anime-title/monologfarm.html
+++ b/anime-title/monologfarm.html
@@ -1,9 +1,8 @@
-<!DOCTYPE html>
 <html lang="uk">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Атака Титанів</title>
+    <title>Ванпанчмен</title>
     <link rel="icon" href="../assets/img/yumi.png" type="image/x-icon" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -122,7 +121,6 @@
         .container {
           margin: 15px;
           padding: 15px;
-          overflow: hidden;
         }
         .info-flex {
           display: flex;
@@ -133,14 +131,11 @@
           padding: 15px;
         }
         .description {
-          padding-left: 3vw;
-          width: 80vw;
-          text-align: center;
-          padding-top: 1em;
+          padding-left: 1em;
+          width: 19em;
         }
         .img-ava {
-          margin-left: 4vw;
-          align-items: center;
+          margin-left: 1em;
         }
       }
     </style>
@@ -151,178 +146,173 @@
     </nav>
 
     <div class="container">
-      <h1 class="nameanime">Атака Титанів</h1>
+      <h1 class="nameanime">Монолог травниці (1 сезон)</h1>
       <div class="info-flex">
         <img
           class="img-ava"
-          src="../assets/img/atacktit.jpg"
+          src="../assets/img/monolog.jpg"
           width="300em"
           height="500em"
           alt=""
         />
 
         <div class="description">
-          Століття тому, на Землі сталося те, чого найбільше боялося людство.
-          Нізвідки з'явилися гіганти, вони мали великий зріст, але були
-          бездумними. Величезних істот нарекли титанами. Вони трощили все, що
-          траплялося на їхньому шляху, а на сніданок харчувалися людьми, які
-          відчайдушно захищалися, вступаючи з ними в протистояння. Але всі
-          спроби подолати людожерів виявилися марними. Титанів не могла знищити
-          жодна високотехнологічна зброя XIX століття і ті, кому вдалося дивом
-          вижити, вирішили звести три величезні стіни. Будівлі вийшли
-          високоміцні та мали колосальну висоту. Монстри не могли пробитися
-          крізь каміння та перелізти через огорожі. Незабаром люди заспокоїлися
-          і почали вести мирне існування. Заради безпеки, населенням було
-          створено спеціальний Легіон Розвідки, до якого відбиралися лише
-          найкращі війни. Але солдати цілими днями лише байдикували і грали в
-          кості, навіть не думаючи про битви, поки в їхніх лавах не з'явився
-          Ерен Єгер — син вченого, який зробив для міста чимало добрих справ.
-          Хлопець не розумів, чому захисники сидять без діла, і не хочуть
-          розчищати території від монстрів, щоб назавжди покінчити із
-          ув'язненням, яке робить їх схожими на худобу.
+          Проект "Монолог травниці" відсилає глядачів у далеке минуле. Події
+          беруть свій початок Сході країни. Саме тут править імператор, служниці
+          і дружини якого мешкають у хугуні. Так називається задній палац, де
+          люди відповідають за добробут імперської сім'ї та порядок. Ми
+          знайомимося з Маомао, дівчиною, яка проживає в невеликому містечку
+          разом із батьком, який займається медициною. Він утримує невелику
+          аптеку, де робить ліки. Героїня поняття нічого не мала про задній
+          палац, доки не опинилася там. Героїню продали на службу в ці місця,
+          тож тепер їй доводиться мати справу із місцевими мешканцями. Маомао
+          відрізняється кмітливістю та багатими знаннями про медицину. Вона
+          готова користуватися цими вміннями, які допомагають їй та багатьом
+          мешканцям палацу. Поступово героїня стає своєю людиною. Незабаром вона
+          стикається з євнухом Цзіньші, який проникає крізь її фасад, а потім
+          робить дівчину фрейліною дружини імператора. Тепер Маомао доведеться
+          куштувати їжу пані на отруту, проте героїня має інші ідеї щодо цієї
+          справи. Вона знає, що робити, щоб уникнути отруєння без загрози для
+          власного життя.
         </div>
       </div>
 
       <div class="info">
-        <strong>Рік виходу:</strong> 2013 <br /><strong>Жанр:</strong> пригоди,
-        фантастика <br /><strong>Тип:</strong> ТБ <br /><strong
-          >Кількість серій:</strong
+        <strong>Рік виходу:</strong> 2023 <br /><strong>Жанр:</strong> драма,
+        детектив, сьонен, комедія, історичний <br /><strong>Тип:</strong> ТБ
+        <br /><strong>Кількість серій:</strong> 24 (25 хв.) <br /><strong
+          >Режисер:</strong
         >
-        25 (25 хв.) <br /><strong>Режисер:</strong> Аракі Тецуро
+        Норіхіро Наганума
       </div>
 
       <div class="video-wrapper" id="video-container">
         <iframe
-          src="https://kodik.info/seria/9902/e2eeee5465d6a0298d51639c95944d8b/720p"
+          src="https://kodik.info/seria/1223330/95af961af7f5192a4ddf7335aac4541c/720p"
           allowfullscreen
         ></iframe>
       </div>
 
       <div class="episodes">
         <button
-          data-src="https://kodik.info/seria/9902/e2eeee5465d6a0298d51639c95944d8b/720p"
+          data-src="https://kodik.info/seria/1223330/95af961af7f5192a4ddf7335aac4541c/720p"
         >
           Серія 1
         </button>
         <button
-          data-src="https://kodik.info/seria/9903/a52138c16712e824166bfdb0c28e9a9d/720p"
+          data-src="https://kodik.info/seria/1224037/b0d3fe4caf97762f232ed361dd10ff0f/720p"
         >
           Серія 2
         </button>
         <button
-          data-src="https://kodik.info/seria/9904/3edc59b0b1e45512042a614d3bc8f838/720p"
+          data-src="https://kodik.info/seria/1224753/9df6a822342ff2f507c32a5c0124195f/720p"
         >
           Серія 3
         </button>
         <button
-          data-src="https://kodik.info/seria/9905/04c59ddc9d56f20516bac31d57c1e5e6/720p"
+          data-src="https://kodik.info/seria/1227101/60457b85dcd0cf7e7573a666d3630cfe/720p"
         >
           Серія 4
         </button>
         <button
-          data-src="https://kodik.info/seria/9906/8ca0d8c299546e6f49f8ec33e33ecfda/720p"
+          data-src="https://kodik.info/seria/1230700/7836be4b3a5ec6722cc9972886cbef29/720p"
         >
           Серія 5
         </button>
         <button
-          data-src="https://kodik.info/seria/9907/3452a51ac6d6a26cefbe313bd2492bf2/720p"
+          data-src="https://kodik.info/seria/1233351/60336d454f06ac9d26a3994b504ca17f/720p"
         >
           Серія 6
         </button>
         <button
-          data-src="https://kodik.info/seria/9908/6e9643696307d69321ed4191dbebf713/720p"
+          data-src="https://kodik.info/seria/1236454/3034f680b20e50e8a0c640c96eafd5e7/720p"
         >
           Серія 7
         </button>
         <button
-          data-src="https://kodik.info/seria/9909/9d1fbabba7cb7a22eb9869ca1823ec0f/720p"
+          data-src="https://kodik.info/seria/1240154/0d49894f2746f490f007f5ced8e16b74/720p"
         >
           Серія 8
         </button>
         <button
-          data-src="https://kodik.info/seria/9910/e91e1706989812d62764fe9b6fc1cc6b/720p"
+          data-src="https://kodik.info/seria/1243459/aa55591de6d6176ee83d4584ab39b9ca/720p"
         >
           Серія 9
         </button>
         <button
-          data-src="https://kodik.info/seria/9911/44ef421fd6e5074fc33e940f6e97080f/720p"
+          data-src="https://kodik.info/seria/1246441/80bc2038d1eb46f1598521daeee16890/720p"
         >
           Серія 10
         </button>
         <button
-          data-src="https://kodik.info/seria/9912/ef051fdb3fb9a449c78543be6dd00f83/720p"
+          data-src="https://kodik.info/seria/1249412/d966482f9b46f6a4b19c1df1b129a4b6/720p"
         >
           Серія 11
         </button>
         <button
-          data-src="https://kodik.info/seria/9913/8a140aaf096b7034299a07e5f825a4f0/720p"
+          data-src="https://kodik.info/seria/1252139/0005fbb50af6c80708725513c0c9a106/720p"
         >
           Серія 12
         </button>
         <button
-          data-src="https://kodik.info/seria/9914/503945cf2876167e41632a5ecde83150/720p"
+          data-src="https://kodik.info/seria/1256848/a9adf4f25e85b3f7671c0633d7ee6d36/720p"
         >
           Серія 13
         </button>
         <button
-          data-src="https://kodik.info/seria/9915/b48aa4540913bca1ca7875e394d0476b/720p"
+          data-src="https://kodik.info/seria/1259353/c63eddc1407057196b29ba1dc99300d4/720p"
         >
           Серія 14
         </button>
         <button
-          data-src="https://kodik.info/seria/9916/9764b555846c0b855212337d2bd15342/720p"
+          data-src="https://kodik.info/seria/1262099/cbbeb460de445d7eff2dc7d573de9e03/720p"
         >
           Серія 15
         </button>
         <button
-          data-src="https://kodik.info/seria/9917/8454da09e686b688b665d7c0e6368706/720p"
+          data-src="https://kodik.info/seria/1265115/b1a07db5f9bde5f1d662365f4742d99e/720p"
         >
           Серія 16
         </button>
         <button
-          data-src="https://kodik.info/seria/9918/db1bdaa52ac2842010da75cfe6875eb5/720p"
+          data-src="https://kodik.info/seria/1267923/59073b3b83241f26e3f0589b81dbb6b7/720p"
         >
           Серія 17
         </button>
         <button
-          data-src="https://kodik.info/seria/9919/d839312a8641ec489c164d78a606e612/720p"
+          data-src="https://kodik.info/seria/1271070/941010ed007ef698d7a0212087ae1acf/720p"
         >
           Серія 18
         </button>
         <button
-          data-src="https://kodik.info/seria/9920/1b6780eb82925291c53618cad1b9f10b/720p"
+          data-src="https://kodik.info/seria/1273952/41d48ab7e336dc1cc652e6bc211c4821/720p"
         >
           Серія 19
         </button>
         <button
-          data-src="https://kodik.info/seria/9921/d8c3b5338aca343bdb7bc2fcf787e5c4/720p"
+          data-src="https://kodik.info/seria/1277175/b03e4dc5a469649b2ea5f50539535cd1/720p"
         >
           Серія 20
         </button>
         <button
-          data-src="https://kodik.info/seria/9922/8ccc65a0ff3aeb0bb8b549a7ff769bc2/720p"
+          data-src="https://kodik.info/seria/1279952/f2970b44fe2ce9bf3bb895cdb03e6126/720p"
         >
           Серія 21
         </button>
         <button
-          data-src="https://kodik.info/seria/9923/3e6f490f049d59c6c39474b29478e9e1/720p"
+          data-src="https://kodik.info/seria/1282734/20aab306d038ce8dfb3786658c583f69/720p"
         >
           Серія 22
         </button>
         <button
-          data-src="https://kodik.info/seria/9924/28ebfe558a3754ed74eba217b574952e/720p"
+          data-src="https://kodik.info/seria/1285215/5600cf890ff608cd05d092202b8c462d/720p"
         >
           Серія 23
         </button>
         <button
-          data-src="https://kodik.info/seria/9925/5002744694a928b8908fda7ed228f192/720p"
+          data-src="https://kodik.info/seria/1287979/f00d2e821015d076ce14f5864e638b96/720p"
         >
           Серія 24
-        </button>
-        <button
-          data-src="https://kodik.info/seria/9926/2dd46387ef589c93064662bf8da4af1b/720p"
-        >
-          Серія 25
         </button>
       </div>
     </div>
